--- a/bilibili-lite/src/h/base.styl
+++ b/bilibili-lite/src/h/base.styl
@@ -5,12 +5,15 @@
 .app-ctnr
 .drawer-card
 .canvas-card
+.activity-card
 .loading-tv
 .empty-hint
 .detail
+.page-error
   background-color var(--c-background) !important
 
 .category
+.canvas-card dt .img-contain
   background-color var(--c-hover) !important
 
 ul.navigation li:after
@@ -21,9 +24,13 @@ ul.navigation li span
 
 ul.navigation li.activated span
 .category li a.activated
+.cntr .sort-cntr .href-all:hover i
+.arrow-left:hover .icon-font
+.arrow-right:hover .icon-font
   color var(--c-accent) !important
 
 .category
+.activity-card
   box-shadow none !important
 
 .canvas-card dd .icon-contain .support
@@ -55,6 +62,13 @@ button.more
 
 .sidebar-canvas
   position fixed !important
+
+.link-panigation .panigation
+  padding 0 10px !important
+  min-width 15px !important
+  height 36px !important
+  line-height 36px !important
+  vertical-align top
 
 .cntr .check-all
   box-shadow none !important
