--- a/bilibili-lite/src/h/info.styl
+++ b/bilibili-lite/src/h/info.styl
@@ -24,7 +24,7 @@ button.more
   vertical-align middle !important
 
 .drawer-pop:after
-  border-top: 14px solid var(--c-background) !important
+  border-top 14px solid var(--c-background) !important
 
 .draw-list[data-v-6caf7b4c]
   border 0 !important
@@ -65,10 +65,10 @@ button.more
 
     .works-ctnr
       margin-top 72px !important
-      width: auto !important
+      width auto !important
 
       .slot-ctnr
-        display: flex
+        display flex
 
         a .item-canvas
-          margin-right: 17px;
+          margin-right 17px
