--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -40,6 +40,7 @@ em:not(.icon)
     color var(--c-white) !important
 
 .gg-icon
+.tag
 .tag-list li.tag-item
 .tag-area .tag
 .link-tag
@@ -55,6 +56,7 @@ em:not(.icon)
   background-color var(--c-background) !important
   color var(--c-text) !important
 
+.tag:hover
 .tag-list li.tag-item:hover
 .tag-area .tag:hover
 .link-tag:hover
@@ -73,6 +75,7 @@ em:not(.icon)
 .tag-list li.tag-item.on:hover .tag-a
   color var(--c-accent) !important
 
+.tag:hover
 .tag-list li.tag-item:hover
 .tag-area .tag:hover
 .link-tag:hover
@@ -104,6 +107,11 @@ textarea
 .user-level-detail
 .select-option
 .popup-bg-cntr .popup-cntr
+.bili-header-m .profile-m
+.bili-header-m .mini-wnd-nav
+.bili-header-m .nav-menu .nav-con .nav-item .i-frame
+.popup-bind-tip
+.set-copyright .copyright-select-box
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
