--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -57,6 +57,8 @@ button
 .cntr .check-all
 .album-popup-ensure
 .info-line .attend
+.link-panigation .panigation.selected
+.submit-btn
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
@@ -140,6 +142,8 @@ button
 .bilibili-player-feedback-submit.disable
 .album-popup-cancel
 .author-info .favourite-btn-ctnr .communicate-btn
+.link-panigation .panigation
+.submit-btn.disabled
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
