--- a/bilibili-lite/src/manga/home.styl
+++ b/bilibili-lite/src/manga/home.styl
@@ -40,6 +40,7 @@
 .newbie-awarder .close-button
 .user-panel .drop-list .logout-btn-container .logout-button
 .drop-list .more-btn-container .more-button
+.index-banner .control-button .app-button
   background-color transparent !important
 
   &::after
