--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -92,6 +92,10 @@ button
 
 .default
 .more-btn
+.prev
+.next
+.btn-pre
+.btn-next
 .van-popper-history .view-all
 .van-popper-favorite .play-all
 .bili-header-m .mini-wnd-nav .read-more
@@ -107,8 +111,6 @@ button
 .main-container .media-info .media-right .media-tool-bar .btn-follow.active
 .bangumi-pagelistbox .p
 .be-pager .be-pager-item
-.be-pager .be-pager-next
-.be-pager .be-pager-prev
 .more-btn-cntr
 .main-container .ep-list-wrapper .list-wrapper.simple ul .ep-item
 #pgc-navigate-wrap .ep-box .ep-sub .ep-item
@@ -165,5 +167,7 @@ button
 .paging-box-big .dian
 .paging-box-big .dian:hover
 .pagelist .flip-left .ellipsis
+.paging-box .next
+.paging-box .prev
   border-color transparent !important
   background-color transparent !important
