--- a/bilibili-lite/src/public/header.styl
+++ b/bilibili-lite/src/public/header.styl
@@ -61,6 +61,9 @@
 	border 1px solid var(--c-border) !important
 	border-top-width 0 !important
 
+.lang-change .lang-intro
+	border 1px solid var(--c-border) !important
+
 .mini-header .nav-user-center .item:nth-child(3) .nav-item .i-frame
 	height 206px
 
