--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -97,6 +97,7 @@ ul.rate-star li i.icon-star-full
 .video-toolbar .ops .share .share-pos .box-a .share-down .share-btn:hover i
 .up-info .u-info .name .message:hover i
 .multi-page .head-con .range-box i:hover
+.up-info>a .up-name.vip
 	color var(--c-accent) !important
 
 .bilibili-player-feedback
