--- a/bilibili-lite/src/live/home.styl
+++ b/bilibili-lite/src/live/home.styl
@@ -21,6 +21,9 @@
 .gift-item.buy.hover
 	background-color var(--c-hover) !important
 
+.bilibili-live-player[data-player-type='player-home'] .bilibili-live-player-enter-tips:hover
+	background-color var(--c-accent) !important
+
 .notice-item .notice-main .notice-title
 .coverNews-item-title
 .area-name
@@ -43,6 +46,9 @@
 .aside-item .aside-item-tips
 .ysly-room-ctnr .item .info span
 	color var(--c-white) !important
+
+.bilibili-live-player[data-player-type='player-home'] .bilibili-live-player-enter-tips
+	border-color var(--c-accent) !important
 
 .bilibili-live-player button
 .live-player-ctnr button
