--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -32,6 +32,7 @@ em:not(.icon)
 .hour-rank
 .attention-btn-ctnr .left-part
 .gift-item .corner-mark
+.container .name-info .live
   border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
