--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -59,6 +59,7 @@ button
 .info-line .attend
 .link-panigation .panigation.selected
 .submit-btn
+.btn-go-write
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
