--- a/bilibili-lite/src/public/comment.styl
+++ b/bilibili-lite/src/public/comment.styl
@@ -3,6 +3,8 @@
 .comment-bilibili-fold .nameplate .nameplate-card .nameplate-arrow
 	display: none
 
+#comment
+.page-comment
 .bb-comment
 .comment-area
 .comment-bilibili-fold
