--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -14,6 +14,7 @@
 .bilibili-player-video-sendbar .bilibili-player-video-inputbar
 .members-info__header
 .bilibili-player .bilibili-player-area .bilibili-player-video-panel
+.v-wrap .danmaku-wrap
 	background-color var(--c-background) !important
 
 .multi-page .cur-list .list-box li.on
